[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Models/Terrain/Mission_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripting/MissionSystem/MissionContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripting/Trigger.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripting/MissionSystem/ObjectiveSingle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Environments/LoadEnvironment.gd" type="Script" id=5]
[ext_resource path="res://Robot/TankRobot_with_sensors.tscn" type="PackedScene" id=6]
[ext_resource path="res://Environments/TutorialSection/TutorialScript.gd" type="Script" id=7]
[ext_resource path="res://Scripting/DialogTrigger.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Models/Textures/Rock015_1K_Color.png" type="Texture" id=9]
[ext_resource path="res://Sensors/TactileInfo.gd" type="Script" id=10]
[ext_resource path="res://Assets/Audio/effects/software_on_1.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Audio/effects/software_on_2.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Audio/effects/software_on_3.wav" type="AudioStream" id=13]

[sub_resource type="Environment" id=1]

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.5, 1.5, 1.5 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 3, 3, 3 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.00784314, 1, 1 )

[node name="Mission1" type="Spatial"]
script = ExtResource( 5 )
robotScene = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="RobotStartLocation" type="Position3D" parent="."]
transform = Transform( 0.912656, 0, -0.408729, 0, 1, 0, 0.408729, 0, 0.912656, 69.8564, -1.13397, 91.4136 )

[node name="Lights" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 44.4108, 0.761785, 2.33966 )
omni_range = 16.0

[node name="OmniLight2" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.1854, 3.40104, 4.46894 )
omni_range = 16.0

[node name="OmniLight3" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.4477, -4.0836, -1.38246 )
light_energy = 1.5
omni_range = 14.0

[node name="OmniLight4" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 72.4544, 0.294676, 84.8 )
light_energy = 1.5
omni_range = 15.2255

[node name="OmniLight6" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.6142, -0.0822973, 23.8152 )
light_color = Color( 0.113725, 0.431373, 0.384314, 1 )
light_energy = 3.45
omni_range = 16.0

[node name="OmniLight5" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 72.4544, -1.77504, 70.9012 )
light_energy = 1.5
omni_range = 15.2255

[node name="OmniLight7" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 59.0766, 0.300995, 69.801 )
light_energy = 1.5
omni_range = 5.63888

[node name="DebugLights" type="Spatial" parent="."]
visible = false

[node name="OmniLight9" type="OmniLight" parent="DebugLights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 76.3019, 3.18205, 57.9133 )
light_energy = 2.17
light_indirect_energy = 4.39
omni_range = 4096.0

[node name="OmniLight8" type="OmniLight" parent="DebugLights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5553, 0.46209, 37.5725 )
light_energy = 2.17
light_indirect_energy = 4.39
omni_range = 4096.0

[node name="CaveMap" parent="." instance=ExtResource( 1 )]

[node name="TutorialMission" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 70.644, 0.294676, 84.8 )
mission_name = "Mission 1 - Enter the cave system"
mission_desc = "The robot has been lowered into the cave system. First we must perform some system checks then we must navigate the robot into the cave system"

[node name="TutorialScripts" type="Node" parent="TutorialMission"]
script = ExtResource( 7 )

[node name="TurnOnCamera" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.847084, -2.05742, 6.45017 )
display_text = "Turn on camera"
disable_on_complete = true
on_complete_dialogue = "tutorial_camera_on_complete"
next_objective_enable = NodePath("../GoToRock")

[node name="GoToRock" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.15592, -2.05742, -7.44608 )
display_text = "Go to the interesting rock"
disable_on_complete = true
on_complete_dialogue = "tutorial_visit_rock_on_complete"
next_objective_enable = NodePath("../TurnOnWhiskers")

[node name="Trigger" parent="TutorialMission/GoToRock" instance=ExtResource( 3 )]
transform = Transform( 6, 0, 0, 0, 1, 0, 0, 0, 6, 0.754367, 0, -1.15001 )
enabled = true

[node name="TurnOnWhiskers" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.847084, -2.05742, 6.45017 )
display_text = "Turn on whisker sensor"
disable_on_complete = true
on_complete_dialogue = "tutorial_whiskers_on_complete"
next_objective_enable = NodePath("../UseWhiskers")

[node name="UseWhiskers" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.157, -2.05742, -7.44608 )
display_text = "Use whiskers on the rock"
disable_on_complete = true
on_complete_dialogue = "tutorial_use_whiskers_complete"
next_objective_enable = NodePath("../UseDrill")

[node name="UseDrill" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.22535, -2.05742, -7.67036 )
display_text = "Take a sample of the rock using a drill"
disable_on_complete = true
on_complete_dialogue = "tutorial_use_drill_complete"
next_objective_enable = NodePath("../EnterCave")

[node name="Trigger" parent="TutorialMission/UseDrill" instance=ExtResource( 3 )]
transform = Transform( 8, 0, 0, 0, 1, 0, 0, 0, 8, 0.754364, 0, 1.0331 )
must_action = 2
custom_criteria_object = NodePath("../../TutorialScripts")
custom_criteria = "check_drill_distance"
enabled = true

[node name="EnterDarkCaveDialog" parent="TutorialMission" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9095, -0.110748, -17.3085 )
enabled = false
dialog = "tutorial_dark_cave_entrance"

[node name="Trigger" parent="TutorialMission/EnterDarkCaveDialog" instance=ExtResource( 3 )]
transform = Transform( 1.99997, -0.00549776, 0, 0.0109955, 0.999985, 0, 0, 0, 2, 0, -0.992286, 2.57973 )
enabled = true

[node name="EnterCave" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -18.1183, -0.212038, -11.4102 )
display_text = "Enter the dark cave"
disable_on_complete = true
on_complete_dialogue = "tutorial_enter_dark_cave_complete"
next_objective_enable = NodePath("../TurnOnLidar")

[node name="Trigger" parent="TutorialMission/EnterCave" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.532284, 0, -1.15001 )
enabled = true
oneshot = true

[node name="TurnOnLidar" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.847084, -2.05742, 6.45017 )
display_text = "Turn on LIDAR"
disable_on_complete = true
on_complete_dialogue = "tutorial_lidar_on_complete"
next_objective_enable = NodePath("../NavigateDarkCave")

[node name="NavigateDarkCave" parent="TutorialMission" instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -43.9765, -2.84955, -45.1968 )
display_text = "Navigate dark cave"
disable_on_complete = true

[node name="Trigger" parent="TutorialMission/NavigateDarkCave" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.532284, 1.29427, -1.15001 )
enabled = true

[node name="DeadEndDialog" parent="TutorialMission" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.8551, 0.326325, 7.31493 )
enabled = false
dialog = "tutorial_dead_end1"

[node name="Trigger" parent="TutorialMission/DeadEndDialog" instance=ExtResource( 3 )]
transform = Transform( 3.99994, -0.00549775, 0, 0.021991, 0.999985, 0, 0, 0, 4, -1.58501, -0.992286, 0.137535 )
enabled = true

[node name="NearEndOfCaveDialog" parent="TutorialMission" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.2123, 0.326325, -32.9062 )
enabled = false
dialog = "tutorial_near_end_of_cave1"

[node name="Trigger" parent="TutorialMission/NearEndOfCaveDialog" instance=ExtResource( 3 )]
transform = Transform( 1.99997, -0.00549776, 0, 0.0109955, 0.999985, 0, 0, 0, 2, 0, -0.992286, 2.57973 )
enabled = true

[node name="InterestingRock" type="RigidBody" parent="TutorialMission"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.10172, -0.748043, -8.13923 )
physics_material_override = SubResource( 2 )
gravity_scale = 3.0

[node name="CollisionShape" type="CollisionShape" parent="TutorialMission/InterestingRock"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="TutorialMission/InterestingRock/CollisionShape"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="TactileInfo" type="Node" parent="TutorialMission/InterestingRock"]
script = ExtResource( 10 )
value = ExtResource( 9 )
texture_name = "Interesting Rock"

[node name="Audio" type="Node" parent="TutorialMission"]

[node name="software_on_camera_audio" type="AudioStreamPlayer" parent="TutorialMission/Audio"]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="software_on_lidar_audio" type="AudioStreamPlayer" parent="TutorialMission/Audio"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="software_on_whisker_audio" type="AudioStreamPlayer" parent="TutorialMission/Audio"]
stream = ExtResource( 13 )
volume_db = -10.0

[connection signal="on_enable" from="TutorialMission/TurnOnCamera" to="TutorialMission/TutorialScripts" method="_on_TurnOnCamera_on_enable"]
[connection signal="on_enable" from="TutorialMission/TurnOnWhiskers" to="TutorialMission/TutorialScripts" method="_on_TurnOnWhiskers_on_enable"]
[connection signal="on_enable" from="TutorialMission/UseWhiskers" to="TutorialMission/TutorialScripts" method="_on_UseWhisker_on_enable"]
[connection signal="on_enable" from="TutorialMission/EnterCave" to="TutorialMission/TutorialScripts" method="_on_EnterCave_on_enable"]
[connection signal="on_enable" from="TutorialMission/TurnOnLidar" to="TutorialMission/TutorialScripts" method="_on_TurnOnLidar_on_enable"]
